<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.activities.coffeExtras.view.CoffeeExtrasActivity">

    <RelativeLayout
        android:id="@+id/relativeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="5dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ivBack"
            android:text="@string/brewWithLex"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tvSecondTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeHeader"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/selectYourSize"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCoffeeExtras"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tvNext"
        android:layout_below="@+id/tvSecondTitle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tvNext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/drawable_app_color_5_round"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp" />



</RelativeLayout>